--- a/views/booking_extras_management.erb
+++ b/views/booking_extras_management.erb
@@ -71,7 +71,7 @@
               <a name="description_tab" href="#description_tab">Descripción</a>
           </li>
           <li class="no-border no-background top-space" style="border:none;background:none">
-              <a name="configuration_tab" href="#configuration_tab">Configuración</a>
+              <a name="configuration_tab" href="#configuration_tab">Stock</a>
           </li>                      
           <li class="no-border no-background top-space" style="border:none;background:none">
               <a name="photos_tab" href="#photos_tab">Fotos</a>
