--- a/views/report_pickup_return.erb
+++ b/views/report_pickup_return.erb
@@ -3,7 +3,7 @@
   <div class="form-button" style="float: right">
   	 <a id="print_link" href="/admin/booking/reports/pickup-return-pdf" target="_blank">Imprimir</a>
   </div>
-  <% if addon_journal %>
+  <% if addons and addons.has_key?(:addon_journal) and addons[:addon_journal] %>
       <button id="add_journal_button" class="form-button right-margin" style="float: right">Añadir diario</button>
       <div class="form-button right-margin" style="float: right">
         <a id="show_journal" href="/admin/booking/journal">Gestión diario</a>
@@ -11,9 +11,13 @@
   <% end %>
 </div>
 <div class="admin_content_wrapper">
-<%= partial(:pickedup_bookings, :locals => {:product_family => product_family}) %>
+<%= partial(:pickedup_bookings, :locals => {product_family: product_family,
+                                            multiple_rental_locations: multiple_rental_locations,
+                                            rental_locations: rental_locations,
+                                            current_user_rental_location: current_user_rental_location,
+                                            current_user_manager: current_user_manager}) %>
 </div>
-<% if addon_journal %>
+<% if addons and addons.has_key?(:addon_journal) and addons[:addon_journal] %>
     <div id="new_journal" class="all-space" style="background-color: white; display: none; min-width: 600px">
       <h3 class="guiblock"><%=t.new_journal.form.title%></h3>
       <form name="new_journal_form" class="form-element">
